fix: align k8s env resources with runtime config

--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -28,6 +28,8 @@ spec:
         envFrom:
         - configMapRef:
             name: ai-docs-config
+        - secretRef:
+            name: ai-docs-secrets
         resources:
           requests:
             memory: "1Gi"
