--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           if ! command -v uv >/dev/null 2>&1; then
             curl -LsSf https://astral.sh/uv/install.sh | sh
+            export PATH="$HOME/.local/bin:$PATH"
             echo "$HOME/.local/bin" >> $GITHUB_PATH
           fi
 
@@ -52,7 +53,7 @@ jobs:
         run: uv --version
 
       - name: Install documentation dependencies
-        run: uv sync --frozen --extra docs
+        run: uv sync --frozen --extra docs pytest
 
       - name: Run documentation checks
         run: uv run python scripts/dev.py validate --check-docs --strict
