--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,12 @@ dependencies = [
     "watchdog>=6.0.0,<7.0.0",
     "tool>=0.8.0",
     "httpx>=0.28.1,<0.29.0",
+    "browser-use>=0.8.0,<0.9.0",
+    "playwright>=1.55.0,<2.0.0",
+    "playwright-stealth>=2.0.0,<3.0.0",
+    "langchain-openai>=0.3.35,<1.0.0",
+    "langchain-anthropic>=0.1.22,<1.0.0",
+    "langchain-google-genai>=2.1.12,<3.0.0",
     # dependency-injector wires core clients (OpenAI, Qdrant, Dragonfly, Firecrawl) via ApplicationContainer.
     "dependency-injector>=4.48.2",
     "pydeps>=3.0.1",
@@ -118,7 +124,6 @@ dev = [
     "ruff>=0.13.1,<0.15.0",
     "pylint>=3.3.8,<4.0.0",
     "pyright>=1.1.379,<2.0.0",
-    "taskipy>=1.14.1,<2.0.0",
     "locust>=2.37.10,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
     "respx>=0.22.0",
@@ -153,7 +158,6 @@ accessibility = [
 
 # Browser automation (essential for web scraping)
 browser = [
-    "playwright>=1.55.0,<2.0.0",
     "rebrowser-playwright>=1.47.0,<2.0.0",
     "tf_playwright_stealth>=1.2.0,<2.0.0",
 ]
