--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,8 @@ dependencies = [
     "numpy>=1.24,<2.4",
     "scipy>=1.16.2,<2.0.0",
     "defusedxml>=0.7.1,<0.8.0",
+    "beautifulsoup4>=4.13.5,<5.0.0",
+    "lxml>=5.3.0,<6.1.0",
     "aiohttp>=3.12.15,<4.0.0",
     "aiofiles>=24.1.0,<25.0.0",
     "tenacity>=9.1.2,<10.0.0",
@@ -88,6 +90,7 @@ dependencies = [
     "langchain-core>=0.3.78",
     "langchain-community>=0.3.31,<0.4.0",
     "langchain-qdrant>=0.2.1,<0.4.0",
+    "langchain-text-splitters>=0.3.11,<0.4.0",
     "langchain-mcp-adapters>=0.1.10,<0.2.0",
     "langgraph>=0.6.8,<0.6.9",
     "asgi-correlation-id>=4.3.4,<5.0.0",
