--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "fastapi[standard]>=0.118.1,<0.119.0",
+    "fastapi[standard]>=0.118.1,<0.120.0",
     "starlette>=0.48.0,<0.49.0",
     "uvicorn[standard]>=0.37.0,<0.38.0",
     "python-multipart>=0.0.20,<0.1.0",
@@ -43,7 +43,7 @@ dependencies = [
     "python-dotenv>=1.1.1,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
     "crawl4ai[all]>=0.7.4,<0.8.0",
-    "firecrawl-py>=4.3.6,<5.0.0",
+    "firecrawl>=4.3.7,<5.0.0",
     "qdrant-client[fastembed]>=1.15.1,<2.0",
     "openai>=1.108.1,<3.0.0",
     "fastembed>=0.7.3,<0.7.4",
@@ -54,15 +54,15 @@ dependencies = [
     "beautifulsoup4>=4.13.5,<5.0.0",
     "lxml>=5.3.0,<6.1.0",
     "aiohttp>=3.12.15,<4.0.0",
-    "aiofiles>=24.1.0,<25.0.0",
+    "aiofiles>=24.1.0,<26.0.0",
     "tenacity>=9.1.2,<10.0.0",
     "mcp>=1.14.1,<2.0.0",
     "fastmcp>=2.12.3,<3.0.0",
     "redis[hiredis]>=5.3.1,<7.0.0",
-    "cachetools>=5.5.2,<6.0.0",
+    "cachetools>=5.5.2,<7.0.0",
     "slowapi>=0.1.9,<0.2.0",
     "platformdirs>=4.3.8,<5.0.0",
-    "click>=8.2.1,<8.2.2",
+    "click>=8.2.1,<8.4.0",
     "rich>=14.1.0,<15.0.0",
     "colorlog>=6.9.0,<7.0.0",
     "tqdm>=4.67.1,<5.0.0",
@@ -70,7 +70,7 @@ dependencies = [
     "prometheus-client>=0.23.1,<0.24.0",
     "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
     "sqlalchemy>=2.0.43,<3.0.0",
-    "sqlmodel>=0.0.25,<0.0.26",
+    "sqlmodel>=0.0.25,<0.0.28",
     "tomli-w>=1.2.0,<2.0.0",
     "jsonschema2md>=1.7.0,<2.0.0",
     "watchdog>=6.0.0,<7.0.0",
@@ -92,13 +92,15 @@ dependencies = [
     "langchain-qdrant>=0.2.1,<0.4.0",
     "langchain-text-splitters>=0.3.11,<0.4.0",
     "langchain-mcp-adapters>=0.1.10,<0.2.0",
-    "langgraph>=0.6.8,<0.6.9",
+    "langgraph>=0.6.8,<0.6.11",
     "asgi-correlation-id>=4.3.4,<5.0.0",
     "purgatory>=3.0.1,<4.0.0",
     "aiolimiter>=1.2.1",
     "trafilatura>=2.0.0",
     "selectolax>=0.4.0",
     "tiktoken>=0.12.0,<0.13.0",
+    "anyio>=4.4.0,<5.0.0",
+    "pydantic-core>=2.23.4,<3.0.0",
 ]
 
 
@@ -128,6 +130,7 @@ dev = [
     "pyright>=1.1.379,<2.0.0",
     "locust>=2.37.10,<3.0.0",
     "respx>=0.22.0",
+    "typer>=0.12.3,<0.20.0",
 ]
 
 # Documentation
@@ -135,7 +138,11 @@ docs = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.6.20",
     "mkdocstrings>=0.30.1",
-    "mkdocstrings-python>=1.18.2"
+    "mkdocstrings-python>=1.18.2",
+    "requests>=2.32.0,<3.0.0",
+    "pandas>=2.2.0,<3.0.0",
+    "plotly>=6.3.0,<7.0.0",
+    "streamlit>=1.39.0,<2.0.0"
 ]
 
 # Contract testing tools
@@ -156,7 +163,7 @@ accessibility = [
 llm = [
     "langchain-anthropic>=0.3.20,<1.0.0",
     "langchain-google-genai>=2.1.12,<3.0.0",
-    "sentence-transformers>=3,<4",
+    "sentence-transformers>=3,<6",
 ]
 
 # Observability and monitoring
@@ -189,7 +196,7 @@ gpu = [
     # Inference libraries
     "transformers>=4.44.0,<5.0.0",
     "accelerate>=0.34.0,<2.0.0",
-    "vllm>=0.10.0,<0.11.0",
+    "vllm>=0.10.0,<0.12.0",
     # Optional optimization libs (may compile from source depending on platform)
     "bitsandbytes>=0.44.0,<1.0.0",
     "xformers>=0.0.28,<1.0.0",
