--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl>=4.3.7,<5.0.0",
     "qdrant-client[fastembed]>=1.15.1,<2.0",
-    "openai>=1.108.1,<3.0.0",
+    "openai>=1.108.1,<2.0.0",
     "fastembed>=0.7.3,<0.7.4",
     "FlagEmbedding>=1.3.5,<2.0.0",
     "numpy>=1.24,<2.4",
@@ -79,7 +79,6 @@ dependencies = [
     "browser-use>=0.8.0,<0.9.0",
     "playwright>=1.55.0,<2.0.0",
     "playwright-stealth>=2.0.0,<3.0.0",
-    "langchain-openai>=0.3.35,<1.0.0",
     "langchain-anthropic>=0.1.22,<1.0.0",
     "langchain-google-genai>=2.1.12,<3.0.0",
     # dependency-injector wires core clients (OpenAI, Qdrant, Dragonfly, Firecrawl) via ApplicationContainer.
@@ -91,6 +90,7 @@ dependencies = [
     "langchain-community>=0.3.31,<0.4.0",
     "langchain-qdrant>=0.2.1,<0.4.0",
     "langchain-text-splitters>=0.3.11,<0.4.0",
+    "langchain-openai>=0.3.35,<1.0.0",
     "langchain-mcp-adapters>=0.1.10,<0.2.0",
     "langgraph>=0.6.8,<0.6.11",
     "asgi-correlation-id>=4.3.4,<5.0.0",
@@ -106,8 +106,7 @@ dependencies = [
 
 [project.optional-dependencies]
 eval = [
-    "ragas==0.1.13",
-    "langchain-openai>=0.3.35,<1.0.0",
+    "ragas>=0.3.3,<1.0.0",
     "datasets>=2.18.0,<5.0.0",
 ]
 
