--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,15 +45,15 @@ dependencies = [
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl>=4.3.7,<5.0.0",
     "qdrant-client[fastembed]>=1.15.1,<2.0",
-    "openai>=1.108.1,<2.0.0",
+    "openai>=1.105.0,<2.0.0",  # browser-use requires less <2.0.0
     "fastembed>=0.7.3,<0.7.4",
     "FlagEmbedding>=1.3.5,<2.0.0",
-    "numpy>=1.24,<2.4",
-    "scipy>=1.16.2,<2.0.0",
+    "numpy>=2.2.2,<2.3.0",
+    "scipy>=1.14.0,<2.0.0",
     "defusedxml>=0.7.1,<0.8.0",
     "beautifulsoup4>=4.13.5,<5.0.0",
-    "lxml>=5.3.0,<6.1.0",
-    "aiohttp>=3.12.15,<4.0.0",
+    "lxml>=5.3.0,<6.0.0",
+    "aiohttp>=3.12.15,<3.13.0",
     "aiofiles>=24.1.0,<26.0.0",
     "tenacity>=9.1.2,<10.0.0",
     "mcp>=1.14.1,<2.0.0",
@@ -155,7 +155,7 @@ accessibility = [
     "selenium>=4.35.0,<5.0.0",
     "playwright>=1.55.0,<2.0.0",
     "beautifulsoup4>=4.13.5,<5.0.0",
-    "lxml>=5.3.0,<6.1.0",
+    "lxml>=5.3.0,<6.0.0",
 ]
 
 # LLM integrations (core AI functionality)
@@ -198,7 +198,7 @@ gpu = [
     "vllm>=0.10.0,<0.12.0",
     # Optional optimization libs (may compile from source depending on platform)
     "bitsandbytes>=0.44.0,<1.0.0",
-    "xformers>=0.0.28,<1.0.0",
+    "xformers>=0.0.32.post1,<0.0.33",
     "triton>=3.0.0,<4.0.0",
     "flash-attn>=2.6.0,<3.0.0",
     "deepspeed>=0.14.0,<1.0.0",
@@ -257,6 +257,7 @@ select = [
     "C4",  # flake8-comprehensions
     "SIM", # flake8-simplify
     "T10", # flake8-debugger
+    "TID", # flake8-tidy-imports
     "S",   # flake8-bandit (security)
 ]
 
@@ -305,6 +306,10 @@ section-order = [
     "local-folder",
 ]
 lines-after-imports = 2
+
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
+"openai.ChatCompletion" = { msg = "Use the Responses API via openai.OpenAI" }
+"ragas.dataset_schema" = { msg = "Ragas >=0.3 ships EvaluationDataset in ragas" }
 
 [tool.pyright]
 pythonVersion = "3.12"
