--- a/pytest.ini
+++ b/pytest.ini
@@ -15,9 +15,11 @@ python_classes = Test* *Test *Tests
 testpaths = tests
 filterwarnings =
     error
-    ignore:pkg_resources is deprecated as an API.:DeprecationWarning
-    ignore:Support for class-based `config` is deprecated:DeprecationWarning
+    ignore:pkg_resources is deprecated as an API\.:DeprecationWarning
+    ignore::pydantic.warnings.PydanticDeprecatedSince20
     ignore:jsonschema\.exceptions\.RefResolutionError is deprecated:DeprecationWarning
+    ignore:read_text is deprecated:DeprecationWarning
+    ignore:open_text is deprecated:DeprecationWarning
     ignore:unclosed event loop:ResourceWarning
     ignore:unclosed <socket\.socket:ResourceWarning
 markers =
