--- a/config/grafana/provisioning/dashboards/dashboard.yml
+++ b/config/grafana/provisioning/dashboards/dashboard.yml
@@ -1,12 +1,12 @@
 apiVersion: 1
 
 providers:
-  - name: 'ML Application Dashboards'
+  - name: 'AI Docs Dashboards'
     orgId: 1
-    folder: 'ML Application'
+    folder: 'AI Docs'
     type: file
     disableDeletion: false
-    updateIntervalSeconds: 10
+    updateIntervalSeconds: 30
     allowUiUpdates: true
     options:
-      path: /etc/grafana/provisioning/dashboards
+      path: /var/lib/grafana/dashboards
