--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl>=4.3.7,<5.0.0",
     "qdrant-client[fastembed]>=1.15.1,<2.0",
-    "openai>=1.105.0,<2.0.0", # browser-use requires less <2.0.0
+    "openai>=1.105.0,<2.0.0",                          # browser-use requires less <2.0.0
     "fastembed>=0.7.3,<0.7.4",
     "FlagEmbedding>=1.3.5,<2.0.0",
     "numpy>=2.2.2,<2.3.0",
@@ -104,10 +104,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-eval = [
-    "ragas>=0.3.3,<1.0.0",
-    "datasets>=2.18.0,<5.0.0",
-]
+eval = ["ragas>=0.3.3,<1.0.0", "datasets>=2.18.0,<5.0.0"]
 dev = [
     "pytest>=8.4.2,<9.0.0",
     "pytest-asyncio>=1.2.0,<2.0.0",
@@ -141,13 +138,11 @@ docs = [
     "requests>=2.32.0,<3.0.0",
     "pandas>=2.2.0,<3.0.0",
     "plotly>=6.3.0,<7.0.0",
-    "streamlit>=1.39.0,<2.0.0"
+    "streamlit>=1.39.0,<2.0.0",
 ]
 
 # Contract testing tools
-contract = [
-    "faker>=37.8.0,<38.0.0",
-]
+contract = ["faker>=37.8.0,<38.0.0"]
 
 # Accessibility testing tools
 accessibility = [
@@ -168,6 +163,9 @@ llm = [
 # Observability and monitoring
 observability = [
     "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59.0",
+    "opentelemetry-instrumentation-httpx>=0.58b0,<0.59.0",
+    "opentelemetry-instrumentation-requests>=0.58b0,<0.59.0",
+    "opentelemetry-instrumentation-logging>=0.58b0,<0.59.0",
     "opentelemetry-exporter-prometheus>=0.58b0,<0.59.0",
     "opentelemetry-instrumentation-starlette>=0.58b0,<0.59.0",
     "psutil>=6.1.1",
@@ -218,9 +216,7 @@ server = [
     "uvloop>=0.21.0,<1.0.0; platform_system != 'Windows'",
 ]
 
-web = [
-    "tavily-python>=0.7.12",
-]
+web = ["tavily-python>=0.7.12"]
 
 [project.urls]
 Homepage = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
@@ -249,56 +245,73 @@ extend-exclude = [".github", "**/*.md", "**/*.yml", "**/*.yaml"]
 
 [tool.ruff.lint]
 select = [
-    "D",      # pydocstyle - docstring formatting
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # pyflakes
-    "I",   # isort
-    "N",   # pep8-naming
-    "UP",  # pyupgrade
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "SIM", # flake8-simplify
+    # Core Python style and syntax
+    "D",  # pydocstyle - docstring formatting
+    "E",  # pycodestyle - syntax errors
+    "W",  # pycodestyle - warnings
+    "F",  # pyflakes - undefined names, unused imports
+    "I",  # isort - import sorting
+    "UP", # pyupgrade - Python version upgrades
+
+    # Code quality and bug detection
+    "B",   # flake8-bugbear - bug detection
+    "C4",  # flake8-comprehensions - list/dict comprehensions
+    "SIM", # flake8-simplify - code simplification
     "RET", # flake8-return - return statement issues
     "RUF", # Ruff-specific rules
-    "PTH", # flake8-use-pathlib - pathlib usage
-    "PIE", # flake8-pie - miscellaneous fixes
-    "ERA", # eradicate - remove commented code
-    "PD",  # pandas-vet - pandas best practices
-    "NPY", # NumPy-specific rules
+
+    # Best practices and modernization
+    "PTH",  # flake8-use-pathlib - pathlib usage
+    "PIE",  # flake8-pie - miscellaneous fixes
+    "ERA",  # eradicate - remove commented code
+    "PD",   # pandas-vet - pandas best practices
+    "NPY",  # NumPy-specific rules
     "PERF", # perflint - performance issues
     "FURB", # refurb - code modernization
-    "LOG",  # flake8-logging-format - logging format
-    "T10",  # flake8-debugger - debugger statements
-    "T20",  # flake8-print - print statements
-    "TRY",  # tryceratops - exception handling
-    "TID", # flake8-tidy-imports
-    "S",   # flake8-bandit (security)
+
+    # Additional rules for stricter Google styling
+    "A",   # flake8-builtins - shadowing builtins
+    "BLE", # flake8-blind-except - bare except clauses
+    "COM", # flake8-commas - trailing commas
+    "FBT", # flake8-boolean-trap - boolean positional args
+    "ICN", # flake8-import-conventions - import naming
+    "ISC", # flake8-implicit-str-concat - implicit string concatenation
+    "Q",   # flake8-quotes - quote consistency
+    "SLF", # flake8-self - private member access
+
+    # Logging and debugging
+    "LOG", # flake8-logging-format - logging format
+    "T10", # flake8-debugger - debugger statements
+    "T20", # flake8-print - print statements
+
+    # Exception handling
+    "TRY", # tryceratops - exception handling
 ]
 
 ignore = [
-    "S101",   # assert statements in tests
-    "S108",   # insecure temp file usage (acceptable in tests)
-    "S311",   # pseudo-random generators (acceptable for tests/non-crypto)
-    "T20",    # print statements in CLI
-    "COM812", # trailing comma missing (formatter handles)
-    "COM819", # trailing comma prohibited
-    "TRY003", # Long messages outside exception class
-    "ERA001", # commented out code (too noisy)
-    "TRY301", # Raise to an inner function
-    "TRY300", # Consider moving to else (can change semantics)
-    "RET505", # superfluous-else-return
+    "S101",    # assert statements in tests
+    "S108",    # insecure temp file usage (acceptable in tests)
+    "S311",    # pseudo-random generators (acceptable for tests/non-crypto)
+    "T20",     # print statements in CLI
+    "COM812",  # trailing comma missing (formatter handles)
+    "COM819",  # trailing comma prohibited
+    "TRY003",  # Long messages outside exception class
+    "ERA001",  # commented out code (too noisy)
+    "TRY301",  # Raise to an inner function
+    "TRY300",  # Consider moving to else (can change semantics)
+    "RET505",  # superfluous-else-return
     "PLR0912", # too-many-branches
     "PLR0913", # too-many-arguments
     "PLR0915", # too-many-statements
-    "FBT001",  # boolean-type-hint-positional-argument
-    "FBT002",  # boolean-default-value-positional-argument
     "SLF001",  # private-member-access
     "TC001",   # typing-only-first-party-import
     "TC002",   # typing-only-third-party-import
     "TC003",   # typing-only-standard-library-import
     "SIM300",  # yoda-conditions
     "C408",    # unnecessary-collection-call
+    "FBT001",  # boolean-type-hint-positional-argument
+    "FBT002",  # boolean-default-value-positional-argument
+    "FBT003",  # boolean-default-value-positional-argument
 ]
 
 fixable = ["ALL"]
@@ -483,10 +496,12 @@ managed = true
 package = true
 # UV performance optimizations
 compile-bytecode = true
-link-mode = "copy" # Better for Docker builds
+link-mode = "copy"       # Better for Docker builds
 default-groups = ["dev"]
 preview = true
 
+[tool.uv.extra-build-dependencies]
+flash-attn = [{ requirement = "torch", match-runtime = true }]
 
 # ===== Dependency Groups =====
 [tool.pylint]
@@ -499,18 +514,15 @@ score = true
 [tool.pylint.messages_control]
 # Conservative disable list - only genuinely problematic rules
 disable = [
-    "too-few-public-methods",  # Common in test classes with just __init__
-    "missing-class-docstring", # Test classes often don't need docstrings
-    "missing-function-docstring", # Test functions often don't need docstrings
-    "invalid-name", # Test functions/methods often use unconventional names
-    "protected-access", # Tests often need to access protected members
-    "broad-except", # Tests may use broad exception handling for mocking
+    "too-few-public-methods", # Common in test classes with just __init__
+    "invalid-name",           # Test functions/methods often use unconventional names
+    "protected-access",       # Tests often need to access protected members
+    "broad-except",           # Tests may use broad exception handling for mocking
     # Test-specific rules that are commonly problematic
-    "unused-argument", # W0613 - Fixtures and mocks often have unused parameters
-    "redefined-outer-name", # W0621 - Common when fixtures redefine names
+    "unused-argument",            # W0613 - Fixtures and mocks often have unused parameters
+    "redefined-outer-name",       # W0621 - Common when fixtures redefine names
     "pointless-string-statement", # W0105 - Duplicate docstrings in test classes
-    "line-too-long", # C0301 - Test code often has long lines due to complex setup
-    "unnecessary-ellipsis", # W1401 - Unnecessary ellipsis in test code
-    "import-outside-toplevel", # C0415 - import-outside-toplevel
+    "line-too-long",              # C0301 - Test code often has long lines due to complex setup
+    "unnecessary-ellipsis",       # W1401 - Unnecessary ellipsis in test code
+    "import-outside-toplevel",    # C0415 - import-outside-toplevel
 ]
-
