chore: update type checking configuration and enhance pytest markers
- Changed `reportMissingTypeStubs` in `pyrightconfig.json` from "warning" to `false` to suppress missing type stubs warnings.
- Added new markers `recorded` and `optional_deps` in `pytest.ini` to facilitate recorded HTTP interactions and dependencies on optional libraries.

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -3,5 +3,5 @@
   "venvPath": ".",
   "venv": ".venv",
   "include": ["src", "tests"],
-  "reportMissingTypeStubs": "warning"
+  "reportMissingTypeStubs": false
 }
