--- a/pytest.ini
+++ b/pytest.ini
@@ -87,5 +87,7 @@ markers =
     visual: visual regression scenarios
     volume: volume-based load testing
     vulnerability: vulnerability scanning coverage
+    recorded: recorded HTTP interactions
+    optional_deps: depends on optional libraries
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
