--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,6 @@ dependencies = [
     "platformdirs>=4.3.8,<5.0.0",
     "click>=8.2.1,<8.4.0",
     "rich>=14.1.0,<15.0.0",
-    "colorlog>=6.9.0,<7.0.0",
     "tqdm>=4.67.1,<5.0.0",
     "questionary>=2.1.1,<3.0.0",
     "prometheus-client>=0.23.1,<0.24.0",
@@ -104,7 +103,8 @@ dependencies = [
 ]
 
 [dependency-groups]
-eval = ["ragas>=0.3.3,<1.0.0", "datasets>=2.18.0,<5.0.0"]
+# Require ragas ≥0.3.5 to ensure llm_factory and modern SingleTurnSample schema
+eval = ["ragas>=0.3.5,<1.0.0", "datasets>=2.18.0,<5.0.0"]
 dev = [
     "pytest>=8.4.2,<9.0.0",
     "pytest-asyncio>=1.2.0,<2.0.0",
@@ -529,7 +529,7 @@ disable = [
     "unnecessary-ellipsis",       # W1401 - Unnecessary ellipsis in test code
     "import-outside-toplevel",    # C0415 - import-outside-toplevel
     # Globally relax complexity thresholds to focus lint on correctness issues
-    "too-many-arguments",         # R0913 - allowed by design in some service APIs
-    "too-many-locals",            # R0914 - complex operations in limited modules
-    "too-many-branches",          # R0912 - controlled complexity in orchestrators
+    "too-many-arguments", # R0913 - allowed by design in some service APIs
+    "too-many-locals",    # R0914 - complex operations in limited modules
+    "too-many-branches",  # R0912 - controlled complexity in orchestrators
 ]
