--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,8 @@ dependencies = [
     "fastapi[standard]>=0.118.1,<0.120.0",
     "starlette>=0.48.0,<0.49.0",
     "uvicorn[standard]>=0.37.0,<0.38.0",
-    "python-multipart>=0.0.20,<0.1.0",
     "pydantic>=2.12.0,<3.0.0",
     "pydantic-settings>=2.11.0,<3.0.0",
-    "python-dotenv>=1.1.1,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl>=4.3.7,<5.0.0",
@@ -49,29 +47,21 @@ dependencies = [
     "numpy>=2.2.2,<2.3.0",
     "scipy>=1.14.0,<2.0.0",
     "defusedxml>=0.7.1,<0.8.0",
-    "beautifulsoup4>=4.13.5,<5.0.0",
-    "lxml>=5.3.0,<6.0.0",
     "aiohttp>=3.12.15,<3.14.0",
     "aiofiles>=24.1.0,<26.0.0",
     "tenacity>=9.1.2,<10.0.0",
     "mcp>=1.14.1,<2.0.0",
     "fastmcp>=2.12.3,<3.0.0",
     "redis[hiredis]>=5.3.1,<7.0.0",
-    "cachetools>=5.5.2,<7.0.0",
     "slowapi>=0.1.9,<0.2.0",
     "platformdirs>=4.3.8,<5.0.0",
     "click>=8.2.1,<8.4.0",
     "rich>=14.1.0,<15.0.0",
-    "tqdm>=4.67.1,<5.0.0",
     "questionary>=2.1.1,<3.0.0",
     "prometheus-client>=0.23.1,<0.24.0",
     "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
     "sqlalchemy>=2.0.43,<3.0.0",
     "sqlmodel>=0.0.25,<0.0.28",
-    "tomli-w>=1.2.0,<2.0.0",
-    "jsonschema2md>=1.7.0,<2.0.0",
-    "watchdog>=6.0.0,<7.0.0",
-    "tool>=0.8.0",
     "httpx>=0.28.1,<0.29.0",
     "browser-use>=0.8.0,<0.9.0",
     "playwright>=1.55.0,<2.0.0",
@@ -80,7 +70,6 @@ dependencies = [
     "langchain-google-genai>=2.1.12,<3.0.0",
     # dependency-injector wires core clients (OpenAI, Qdrant, Dragonfly, Firecrawl) via ApplicationContainer.
     "dependency-injector>=4.48.2",
-    "pydeps>=3.0.1",
     "scikit-learn>=1.7.2,<2.0.0",
     "langchain>=0.3.27,<0.4.0",
     "langchain-core>=0.3.78",
@@ -94,7 +83,6 @@ dependencies = [
     "purgatory>=3.0.1,<4.0.0",
     "aiolimiter>=1.2.1",
     "trafilatura>=2.0.0",
-    "selectolax>=0.4.0",
     "tiktoken>=0.12.0,<0.13.0",
     "anyio>=4.4.0,<5.0.0",
     "pydantic-core>=2.23.4,<3.0.0",
@@ -105,7 +93,7 @@ dependencies = [
 
 [dependency-groups]
 # Require ragas ≥0.3.5 to ensure llm_factory and modern SingleTurnSample schema
-eval = ["ragas>=0.3.5,<1.0.0", "datasets>=2.18.0,<5.0.0"]
+eval = ["ragas>=0.3.5,<1.0.0"]
 dev = [
     "pytest>=8.4.2,<9.0.0",
     "pytest-asyncio>=1.2.0,<2.0.0",
@@ -120,6 +108,7 @@ dev = [
     "mutmut>=3.3.1,<4.0.0",
     "fakeredis>=2.32.0,<3.0.0",
     "coverage>=7.10.7,<8.0.0",
+    "python-dotenv>=1.1.1,<2.0.0",
     "ruff>=0.14.0,<0.15.0",
     "pylint>=4.0.0,<5.0.0",
     "pyright>=1.1.406,<2.0.0",
@@ -142,25 +131,6 @@ docs = [
     "streamlit>=1.39.0,<2.0.0",
 ]
 
-# Contract testing tools
-contract = ["faker>=37.8.0,<38.0.0"]
-
-# Accessibility testing tools
-accessibility = [
-    "axe-core-python>=0.1.0,<1.0.0",
-    "selenium>=4.35.0,<5.0.0",
-    "playwright>=1.55.0,<2.0.0",
-    "beautifulsoup4>=4.13.5,<5.0.0",
-    "lxml>=5.3.0,<6.0.0",
-]
-
-# LLM integrations (core AI functionality)
-llm = [
-    "langchain-anthropic>=0.3.20,<1.0.0",
-    "langchain-google-genai>=2.1.12,<3.0.0",
-    "sentence-transformers>=3,<6",
-]
-
 # Observability and monitoring
 observability = [
     "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59.0",
@@ -178,17 +148,6 @@ obs = [
     "opentelemetry-exporter-otlp>=1.37.0,<2.0.0",
     "prometheus-client>=0.23.1,<0.24.0",
 ]
-
-# Code parsing tools
-parsing = [
-    "tree-sitter>=0.25.1,<0.26.0",
-    "tree-sitter-python>=0.25.0,<0.26.0",
-    "tree-sitter-javascript>=0.25.0,<0.26.0",
-    "tree-sitter-typescript>=0.23.2,<0.24.0",
-]
-
-# High-performance data processing
-dataframe = ["polars>=1.33.1,<2.0.0", "pyarrow>=21.0.0,<22.0.0"]
 
 # GPU acceleration (optional AI/ML performance boost)
 gpu = [
@@ -212,7 +171,6 @@ gpu = [
 
 server = [
     "brotli-asgi>=1.4.0,<2.0.0",
-    "flagsmith>=4.0.1",
     "purgatory[redis]>=3.0.1,<4.0.0",
     "uvloop>=0.21.0,<1.0.0; platform_system != 'Windows'",
 ]
@@ -254,14 +212,12 @@ select = [
     "F",  # pyflakes - undefined names, unused imports
     "I",  # isort - import sorting
     "UP", # pyupgrade - Python version upgrades
-
     # Code quality and bug detection
     "B",   # flake8-bugbear - bug detection
     "C4",  # flake8-comprehensions - list/dict comprehensions
     "SIM", # flake8-simplify - code simplification
     "RET", # flake8-return - return statement issues
     "RUF", # Ruff-specific rules
-
     # Best practices and modernization
     "PTH",  # flake8-use-pathlib - pathlib usage
     "PIE",  # flake8-pie - miscellaneous fixes
@@ -270,7 +226,6 @@ select = [
     "NPY",  # NumPy-specific rules
     "PERF", # perflint - performance issues
     "FURB", # refurb - code modernization
-
     # Additional rules for stricter Google styling
     "A",   # flake8-builtins - shadowing builtins
     "BLE", # flake8-blind-except - bare except clauses
@@ -280,12 +235,10 @@ select = [
     "ISC", # flake8-implicit-str-concat - implicit string concatenation
     "Q",   # flake8-quotes - quote consistency
     "SLF", # flake8-self - private member access
-
     # Logging and debugging
     "LOG", # flake8-logging-format - logging format
     "T10", # flake8-debugger - debugger statements
     "T20", # flake8-print - print statements
-
     # Exception handling
     "TRY", # tryceratops - exception handling
 ]
