chore: enable pyright missing-stub warnings (PRRT_kwDOOuWmjc5nr8uv)

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,5 +2,5 @@
   "venvPath": ".",
   "venv": ".venv",
   "include": ["src", "tests"],
-  "reportMissingTypeStubs": false
+  "reportMissingTypeStubs": "warning"
 }
