fix: resolve PR #296 review comments
- Remove deprecated `integration` marker from pytest.ini (now uses `service`)
- Clarify directory descriptions in docs/testing/testing-guide.md
- Add comment explaining why docs/docs-dev groups are intentionally duplicated
- Simplify redundant availability checks in rag_golden_eval.py with asserts
- Standardize exception ordering in dependencies.py for consistency
- Add error handling for tracemalloc.start() in tests/conftest.py
- Fix FakeProjectStorage API to match real ProjectStorage implementation
- Remove dead fallback code in tests/load/locustfile.py
- Add `service` test profile to scripts/dev.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,7 +131,10 @@ dev = [
     "vulture>=2.14,<3.0.0",
 ]
 
-# Documentation tooling (uv dependency group)
+# Documentation tooling (uv dependency group).
+# Intentionally mirrors [project.optional-dependencies] docs above.
+# - `docs` supports `pip install .[docs]` for end-users building documentation.
+# - `docs-dev` supports `uv sync --group docs-dev` for uv-based dev workflows.
 docs-dev = [
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.7.1,<10.0.0",
